fix style spacing around project img, change bg color

--- a/src/components/ProjectBox/index.css
+++ b/src/components/ProjectBox/index.css
@@ -2,6 +2,13 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-start;
+	background-color: #dde6ed;
+	margin-bottom: 2em;
+	border-radius: 4px;
+}
+
+.project-box-img{ 
+	margin-right: 2em;
 }
 
 .project-title {
